make pieces draggable

--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,7 +1,23 @@
-.square {
-  position: absolute;
-  z-index: 9;
+.piece {
+    position: absolute;
+    z-index: 9;
     width: 100px;
     height: 100px;
     background-color: blue;
+}
+#chessboard {
+    display: flex;
+    flex-direction: column;
+}
+.rank {
+    display: flex;
+    flex-direction: row;
+}
+.square {
+    width: 100px;
+    height: 100px;
+    background-color: black;
+}
+.rank:nth-child(odd) > .square:nth-child(odd) , .rank:nth-child(even) > .square:nth-child(even){
+    background-color: red;
 }
