--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,13 @@
 .move {
     width: 50%;
 }
+@media (max-width:800px) {
+    .piece {
+        width: 100%;
+        height: 100%;
+    }
+    .square {
+        width: 12.4vw;
+        height: 12.4vw;
+    }
+}
