--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,9 @@
     height: 100px;
     background-color: #2A231F;
 }
+.rank:nth-child(odd) > .square:nth-child(odd).to_move , .rank:nth-child(even) > .square:nth-child(even).to_move, .to_move{
+    background-color: blue;
+}
 .rank:nth-child(odd) > .square:nth-child(odd) , .rank:nth-child(even) > .square:nth-child(even){
     background-color: #D8E1E7;
 }
