--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,14 +88,15 @@ main {
     margin: 16px 20px;
 }
 #message-form {
+    border-top: 1px solid var(--light-dark);
     position: sticky;
     height: 44px;
 }
 input#send-message {
     height: 100%;
-    width: calc(100% - 20px);/*max width - padding*/
+    width: calc(100% - 20px - 64px);/*max width - padding*/
     margin: 0;
-    padding: 0 0 0 20px;
+    padding: 0 64px 0 20px;
     background-color: var(--dark-dark);
     color: var(--light-light);
     border: none;
@@ -104,6 +105,7 @@ input#send-message {
     background-repeat: no-repeat;
     background-size: 44px;
     background-position-x: calc(100% - 10px);
+    text-wrap: wrap;
 }
 input#send-message:focus {
     background-color: var(--light-dark);
