--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,8 @@ main {
 .piece {
     width: 100px;
     height: 100px;
+    position: relative;
+    z-index: 1;
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -68,7 +70,14 @@ main {
     background-color: var(--light-dark);
 }
 .rank:nth-child(odd) > .square:nth-child(odd).to_move , .rank:nth-child(even) > .square:nth-child(even).to_move, .to_move{
-    background-color: blue;
+    position: relative;
+}
+.square.to_move::before {
+    position: absolute;
+    content: "";
+    width: 100px;
+    height: 100px;
+    background-color: #d9042763;
 }
 .rank:nth-child(odd) > .square:nth-child(odd) , .rank:nth-child(even) > .square:nth-child(even){
     background-color: var(--dark-light);
@@ -190,7 +199,7 @@ span.user-name {
         width: 100%;
         height: 100%;
     }
-    .square {
+    .square, .square.to_move::before {
         width: 12.4vw;
         height: 12.4vw;
     }
