--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,7 @@ main {
 #chessboard {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 .rank {
     display: flex;
@@ -81,6 +82,38 @@ main {
 }
 .rank:nth-child(odd) > .square:nth-child(odd) , .rank:nth-child(even) > .square:nth-child(even){
     background-color: var(--dark-light);
+}
+#alert-message {
+    position: absolute;
+    z-index: 10;
+    left: 150px;
+    top: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 500px;
+    height: 100px;
+    background-color: var(--user-name);
+    color: var(--light-light);
+    border-radius: 20px;
+}
+#close-button {
+    position: absolute;
+    right: 18px;
+    top: 14px;
+    width: 30px;
+    height: 30px;
+    background-color: inherit;
+    background-image: url("../img/cross.svg");
+    background-size: contain;
+    border: none;
+}
+#alert-message > p {
+    margin: 0;
+}
+#alert-message > h3 {
+    margin-bottom: 13px;
 }
 /*chat*/
 #chat, #moves-section {
