--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ main {
     justify-content: space-between;
 }
 #messages {
-    height: calc(100% * 15 / 16);/*#chat - send-message*/
+    height: calc(100% * 13 / 14);/*#chat - send-message*/
     overflow: auto;
     scrollbar-width: none;
     scrollbar-color: var(--user-name) var(--dark-dark);
@@ -158,9 +158,11 @@ main {
     margin: 16px 20px;
 }
 #message-form {
+    display: flex;
+    flex-direction: row;
     border-top: 1px solid var(--light-dark);
-    position: static;
-    height: calc(100% / 16 -1px);
+    position: relative;
+    height: calc(100% / 14 - 2px);
 }
 input#send-message {
     height: 100%;
@@ -170,6 +172,7 @@ input#send-message {
     background-color: var(--dark-dark);
     color: var(--light-light);
     border: none;
+    border-bottom: 1px solid var(--light-dark);
     border-radius: 0 0 15px 15px;
     background-image: url("../img/send.svg");
     background-repeat: no-repeat;
