--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,6 +237,7 @@ span.user-name {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: start;
+    height: calc(100% - 84px);
     overflow: auto;
     scrollbar-width: none;
     scrollbar-color: var(--user-name) var(--dark-dark);
