--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,11 @@ a {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #d9042763;
+    background-color: #9b3a4abe;
+}
+.square.to_move:hover::before {
+    background-color: #9b1b30be;
+    cursor: pointer;
 }
 .rank:nth-child(odd) > .square:nth-child(odd) , .rank:nth-child(even) > .square:nth-child(even){
     background-color: var(--dark-light);
