--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,29 @@ a {
     font-size: 1.2em;
     color: var(--user-name);
 }
+/*bot parameters*/
+#bot-parameters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    z-index: 10;
+    left: 10vw;
+    top: 10vh;
+    width: 80vw;
+    height: 80vh;
+    background-color: var(--light-dark);
+    border-radius: 25px;
+}
+#bot-parameters > h2 {
+    text-align: center;
+    font-size: 2em;
+}
+#bot-parameters > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /*chessboard*/
 #opponent-infos, #user-infos {
     display: flex;
