--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,29 +96,9 @@ a {
     transition-property: all;
     transition-timing-function: linear;
 }
-.white {
-    filter: invert(97%) sepia(3%) saturate(1353%) hue-rotate(176deg) brightness(97%) contrast(91%);
-}
-.black {
-    filter: invert(17%) sepia(36%) saturate(664%) hue-rotate(175deg) brightness(97%) contrast(90%);
-}
-.queen {
-    background-image: url("../img/queen.svg");
-}
-.king {
-    background-image: url("../img/king.svg");
-}
-.pawn {
-    background-image: url("../img/pawn.svg");
-}
-.rook {
-    background-image: url("../img/rook.svg");
-}
-.bishop {
-    background-image: url("../img/bishop.svg");
-}
-.knight {
-    background-image: url("../img/knight.svg");
+.piece > img {
+    width: 100%;
+    height: 100%;
 }
 #chessboard {
     display: flex;
