--- a/views/old_games.ejs
+++ b/views/old_games.ejs
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/old_games.css">
 </head>
 <body>
+    <h1 id="old-games-header">Liste des parties jouées</h1>
     <% games.forEach(game => { %>
-        <p><%= game.pgn %></p>
+        <div class="old-game">
+            <!-- players and the colors they played -->
+            <h2><span><%=game.white_player || "Anonyme"%></span> avec les blancs contre <span><%=game.black_player || "Anonyme"%></span> avec les noirs</h2>
+            <% if (game.winner=="white") { %>
+                <!--if white victory-->
+                <h3>Victoire de <span><%=game.white_player || "Anonyme"%></span> avec les blancs par mat.</h3>
+            <% } else if (game.winner=="black") { %>
+                <!--if black victory-->
+                <h3>Victoire de <span><%=game.black_player || "Anonyme"%></span> avec les noirs par mat.</h3>
+            <% } else if (game.winner=="draw") { %>
+                <!--if draw-->
+                <h3>matche nulle <span> par accord mutuel.</h3>
+            <% } %>
+            <!-- date of the game -->
+            <h3>Le <%=game.date%></h3>
+            <!-- pgn -->
+            <p><%=game.pgn%></p>
+        </div>
     <% }) %>
 </body>
 </html>
