--- a/views/old_games.ejs
+++ b/views/old_games.ejs
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/old_games.css">
 </head>
-<body>
+<body id="old-games-page">
     <h1 id="old-games-header">Liste des parties jouées</h1>
     <% games.forEach(game => { %>
         <div class="old-game">
