--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/sign.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <%if (error) { %>
-        <h2 class="error-message"><%=error%></h2>
-    <% } %>
-    <form method="POST">
-        <input type="text" name="username" id="username">
+    <form method="POST" id="sign-form">
+        <%if (error) { %>
+            <h2 class="error-message"><%=error%></h2>
+        <% } %>
+        <h1>Login</h1>
+        <input type="text" name="username" id="username" autofocus>
         <input type="password" name="password" id="password">
-        <input type="submit" value="Send">
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
