--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
+    <%- include("./views/inc/navbar.ejs") %>
     <h1>Home</h1>
     <h2><a href="#">Créer une partie</a></h2>
     <section id="waiting-games">
