--- a/views/old_games.ejs
+++ b/views/old_games.ejs
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body id="old-games-page">
+    <%- include("./views/inc/navbar.ejs") %>
     <h1 id="old-games-header">Liste des parties jouées</h1>
     <% games.forEach(game => { %>
         <div class="old-game">
