--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -7,7 +7,11 @@
             <a href="./old_games">View Games</a>
         </li>
         <li>
+            <% if (user) { %>
+            <a id="username-nav-bar"><%= user.username %></a>
+            <% }else { %>
             <a href="./login">Login</a>
+            <% } %>
         </li>
     </ul>
 </nav>
