linked login and signup

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,7 @@
         <h1>Login</h1>
         <input type="text" name="username" id="username" autofocus>
         <input type="password" name="password" id="password">
+        <p>don't yet have an account? <a href="./signup">register here</a></p>
         <input type="submit" value="Login">
     </form>
 </body>
