--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,6 +17,7 @@
         <h1>Signup</h1>
         <input type="text" name="username" id="username" autofocus>
         <input type="password" name="password" id="password">
+        <p>already have an account? <a href="./login">login here</a></p>
         <input type="submit" value="Signup">
     </form>
 </body>
