--- a/views/game.ejs
+++ b/views/game.ejs
@@ -25,7 +25,11 @@
             </div>
             <div id="chessboard"></div>
             <div id="user-infos">
-                <p><span class="user-name">Vous</span></p>
+                <% if (user){ %>
+                    <p><span class="user-name"><%=user.username%></span></p>
+                <% }else{ %>
+                    <p><span class="user-name">Vous</span></p>
+                <% } %>
                 <p id="timer1">20:00</p>
             </div>
         </div>
