show playing games

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,9 @@
     <section id="waiting-games">
         <h2>Parties en attentes : </h2>
     </section>
+    <section id="playing-games">
+        <h2>Parties en cours : </h2>
+    </section>
     <section id="bot-games">
         <h2>Bots : </h2>
         <section id="stockfish-games">
