--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -9,6 +9,17 @@
         <li>
             <% if (user) { %>
             <a id="username-nav-bar"><%= user.username %></a>
+            <a id="logout-button">Logout</a>
+            <script>
+              document.querySelector("#logout-button").addEventListener("click", (event)=>{
+                event.preventDefault();
+                fetch("./logout")
+                .then(()=>{
+                  console.log("test");
+                  location.reload();
+                });
+              });
+            </script>
             <% }else { %>
             <a href="./login">Login</a>
             <% } %>
