--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/old_games.css">
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
@@ -46,7 +47,7 @@
                     <p><%=game.pgn%></p>
                 </div>
             <% }) %>
-        <h3><a href="./old_games">Voir plus</a></h3>
+        <h3 id="see-more-link"><a href="./old_games">See more</a></h3>
     </section>
     <script type="module" src="../js/home.mjs"></script>
 </body>
