--- a/views/old_games.ejs
+++ b/views/old_games.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/old_games.css">
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body id="old-games-page">
@@ -13,16 +14,15 @@
     <% games.forEach(game => { %>
         <div class="old-game">
             <!-- players and the colors they played -->
-            <h2><span><%=game.white_player || "Anonyme"%></span> avec les blancs contre <span><%=game.black_player || "Anonyme"%></span> avec les noirs</h2>
             <% if (game.winner=="white") { %>
                 <!--if white victory-->
-                <h3>Victoire de <span><%=game.white_player || "Anonyme"%></span> avec les blancs par <%=game.status%>.</h3>
+            <h2>Victory of <span><%=game.white_player || "Anonyme"%></span> with white against <span><%=game.black_player || "Anonyme"%></span> by <%=game.status%>.</h2>
             <% } else if (game.winner=="black") { %>
                 <!--if black victory-->
-                <h3>Victoire de <span><%=game.black_player || "Anonyme"%></span> avec les noirs par <%=game.status%>.</h3>
+            <h2>Victory of <span><%=game.black_player || "Anonyme"%></span> with black against <span><%=game.white_player || "Anonyme"%></span> by <%=game.status%>.</h2>
             <% } else if (game.winner=="draw") { %>
                 <!--if draw-->
-                <h3>matche nulle <span> <%=game.status%>.</h3>
+            <h2>draw between <span><%=game.white_player || "Anonyme"%></span> with white against <span><%=game.black_player || "Anonyme"%></span> by <%=game.status%>.</h2>
             <% } %>
             <!-- date of the game -->
             <h3>Le <%=game.date%></h3>
