games home style

--- a/views/old_games.ejs
+++ b/views/old_games.ejs
@@ -25,7 +25,7 @@
             <h2>draw between <span><%=game.white_player || "Anonyme"%></span> with white against <span><%=game.black_player || "Anonyme"%></span> by <%=game.status%>.</h2>
             <% } %>
             <!-- date of the game -->
-            <h3>Le <%=game.date%></h3>
+            <h3><%=game.date%></h3>
             <!-- pgn -->
             <p><%=game.pgn%></p>
         </div>
