--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,24 +28,23 @@
     <section id="last-games">
         <h2>Dernières parties :</h2>
             <% games.forEach(game => { %>
-                <div class="old-game">
-                    <!-- players and the colors they played -->
-                    <h2><span><%=game.white_player || "Anonyme"%></span> avec les blancs contre <span><%=game.black_player || "Anonyme"%></span> avec les noirs</h2>
-                    <% if (game.winner=="white") { %>
-                        <!--if white victory-->
-                        <h3>Victoire de <span><%=game.white_player || "Anonyme"%></span> avec les blancs par <%=game.status%>.</h3>
-                    <% } else if (game.winner=="black") { %>
-                        <!--if black victory-->
-                        <h3>Victoire de <span><%=game.black_player || "Anonyme"%></span> avec les noirs par <%=game.status%>.</h3>
-                    <% } else if (game.winner=="draw") { %>
-                        <!--if draw-->
-                        <h3>matche nulle <span> <%=game.status%>.</h3>
-                    <% } %>
-                    <!-- date of the game -->
-                    <h3>Le <%=game.date%></h3>
-                    <!-- pgn -->
-                    <p><%=game.pgn%></p>
-                </div>
+              <div class="old-game">
+                <!-- players and the colors they played -->
+                <% if (game.winner=="white") { %>
+                <!--if white victory-->
+                <h2>Victory of <span><%=game.white_player || "Anonyme"%></span> with white against <span><%=game.black_player || "Anonyme"%></span> by <%=game.status%>.</h2>
+                <% } else if (game.winner=="black") { %>
+                <!--if black victory-->
+                <h2>Victory of <span><%=game.black_player || "Anonyme"%></span> with black against <span><%=game.white_player || "Anonyme"%></span> by <%=game.status%>.</h2>
+                <% } else if (game.winner=="draw") { %>
+                <!--if draw-->
+                <h2>draw between <span><%=game.white_player || "Anonyme"%></span> with white against <span><%=game.black_player || "Anonyme"%></span> by <%=game.status%>.</h2>
+                <% } %>
+            <!-- date of the game -->
+                <h3><%=game.date%></h3>
+            <!-- pgn -->
+                <p><%=game.pgn%></p>
+              </div>
             <% }) %>
         <h3 id="see-more-link"><a href="./old_games">See more</a></h3>
     </section>
