--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/old_games.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/old_games.css">
 </head>
 <body>
     <%- include("./views/inc/navbar.ejs") %>
     <h1>Home</h1>
-    <h2><a href="#">Créer une partie</a></h2>
+    <h2 class="launch-game"><img class="icons" src="./img/create.svg"><a href="#">Create a Game</a></h2>
+    <h2 class="launch-game"><img class="icons" src="./img/stockfish_logo.png"><a href="#">Play against Stockfish</a></h2>
     <section id="waiting-games">
         <h2>Parties en attentes : </h2>
     </section>
