--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,20 +15,13 @@
     <h2 class="launch-game"><img class="icons" src="./img/create.svg"><a href="#">Create a Game</a></h2>
     <h2 class="launch-game"><img class="icons" src="./img/stockfish_logo.png"><a href="#">Play against Stockfish</a></h2>
     <section id="waiting-games">
-        <h2>Parties en attentes : </h2>
+        <h2>Join Games : </h2>
     </section>
     <section id="playing-games">
-        <h2>Parties en cours : </h2>
-    </section>
-    <section id="bot-games">
-        <h2>Bots : </h2>
-        <section id="stockfish-games">
-            <h3><a href="#">Affronter Stockfish</a></h3>
-            <p><a href="https://github.com/official-stockfish/Stockfish" target="_blank">Voir le code source</a></p>
-        </section>
+        <h2>Watch Games : </h2>
     </section>
     <section id="last-games">
-        <h2>Dernières parties :</h2>
+        <h2>Last Games :</h2>
             <% games.forEach(game => { %>
               <div class="old-game">
                 <!-- players and the colors they played -->
